--- a/Anjalimam JS/Task/04_nextElement.html
+++ b/Anjalimam JS/Task/04_nextElement.html
@@ -27,6 +27,7 @@
             color: black;
             display: none;
             height: 75px;
+            margin-top: -20px;
             width: 70vh;
         }
     </style>
