--- a/Anjalimam JS/Practice/22_splice_example.html
+++ b/Anjalimam JS/Practice/22_splice_example.html
@@ -49,6 +49,9 @@
                  displayArray();
 
             }
+            else{
+                console.log("element not found !");
+            }
         }
     </script>
 </body>
